add config file support

--- a/devices/Makefile
+++ b/devices/Makefile
@@ -1,11 +1,14 @@
+
 CC = gcc
 LIBS  = -lndn-lite
 CFLAGS = -O3 -I ../hardware-interface/
 SRCS = $(wildcard *.c)
 PROGS = $(patsubst %.c,%,$(SRCS))
+TASK = senarial 1
 all: $(PROGS)
 
 %: %.c
-	$(CC) $(CFLAGS) -o $@ $< $(LIBS) 
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS) --include "configs/$(TASK)/$@"
 clean: 
 	rm -f $(PROGS)
+
